Update profile-3d.yml to use GITHUB_TOKEN instead of my created PROFILE_README_TOKENed GITHUB_TOKEN

--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -19,13 +19,13 @@ jobs:
     - name: Generate 3D Profile SVG
       uses: yoshi389111/github-profile-3d-contrib@0.9.0
       env:
-        GITHUB_TOKEN: ${{ secrets.PROFILE_README_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         USERNAME: ${{ github.repository_owner }}
 
     - name: Push SVGs to branch
       uses: crazy-max/ghaction-github-pages@v3.1.0
       env:
-        GITHUB_TOKEN: ${{ secrets.PROFILE_README_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         target_branch: output-3d-contrib
         build_dir: profile-3d-contrib
